<package format="2">
  <name>qt_gui_core</name>
  <version>2.10.3</version>
  <description>
    Integration of the ROS package system and ROS-specific plugins for a Qt-based GUI.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/ros-visualization/qt_gui_core</url>
  <url type="bugtracker">https://github.com/ros-visualization/qt_gui_core/issues</url>
  <author>Dirk Thomas</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend version_gte="0.3.0">qt_dotgraph</exec_depend>
  <exec_depend version_gte="0.3.0">qt_gui</exec_depend>
  <exec_depend version_gte="0.3.0">qt_gui_app</exec_depend>
  <exec_depend version_gte="0.3.0">qt_gui_cpp</exec_depend>
  <exec_depend version_gte="0.3.0">qt_gui_py_common</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
